--- a/style.css
+++ b/style.css
@@ -30,12 +30,21 @@ h1 {
 .sky {
     border: 1px solid #373C99;
     height: 20vh;
-    margin: 5%;
 }
 
 .waves {
     border: 1px solid #373C99;
     height: 20vh;
-    margin: 5%;
 }
 
+#mainGameContainer {
+    margin: 5%;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+}
+
+#displaySplashInstructionsContainer {
+    position: absolute;
+    padding-right: 50px;
+}
