--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ h1 {
     border-radius: 10px;
     background: linear-gradient(#f9855d,#fdd288,white);
     overflow: hidden;
-    padding-top: 10px;
 }
 
 .sky {
@@ -52,8 +51,39 @@ h1 {
 }
 
 .waves {
-    border: 1px solid #373C99;
-    height: 20vh;
+    position: relative;
+    width: 100%;
+    height: 30vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+    z-index: -2;
+    
+}
+
+.sun {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 370px;
+    right: 40px;
+    background-color: #f9cb5d;
+    border-radius: 50%;
+    z-index: 2;
+}
+
+/* waves */
+.ocean {
+    height: 150px; /* change the height of the waves here */
+    width: 400%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-x: hidden;
+    background-color: #1e90ff;
+    border-top: 2px white solid;
+    z-index: 4;
 }
 
 #avatar {
@@ -115,15 +145,21 @@ h1 {
   }
 
   /* Keyframes below here ! */
-  @keyframes wind{
+@keyframes wave {
+    0% {transform: translateX(0);}
+    50% {transform: translateX(-25%);}
+    100% {transform: translateX(-50%);}
+}
+
+@keyframes wind{
     0% {
-      background-position: 0 200px, 0 300px, 100px 250px;
+        background-position: 0 200px, 0 300px, 100px 250px;
     }
     50% {
-      background-position: 1000px 200px, 1200px 300px, 1400px 250px;
+        background-position: 1000px 200px, 1200px 300px, 1400px 250px;
     }
     100% {
-      background-position: 0 200px, 0 300px, 100px 250px;
+        background-position: 0 200px, 0 300px, 100px 250px;
     }
-  
-  }
+
+}
