--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ h1 {
     padding: 40px;
     background-color: #FE9D8D;
     border: 5px #373C99 solid;
-    display: none; /*Remove after Testing ! */
+    z-index: 10;
+    display: none;
 }
 
 #leaderSurfboard {
@@ -132,6 +133,28 @@ h1 {
     height: 60px;
 }
 
+.wave {
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 88.7'%3E%3Cpath d='M800 56.9c-155.5 0-204.9-50-405.5-49.9-200 0-250 49.9-394.5 49.9v31.8h800v-.2-31.6z' fill='%23003F7C'/%3E%3C/svg%3E");
+    position: absolute;
+    width: 200%;
+    height: 100%;
+    animation: wave 20s -3s linear infinite;
+    transform: translate3d(0, 0, 0);
+    opacity: 0.6;
+  }
+  
+  .wave:nth-of-type(2) {
+    bottom: 0;
+    animation: wave 36s linear reverse infinite;
+    opacity: 0.7;
+  }
+  
+  .wave:nth-of-type(3) {
+    bottom: 0;
+    animation: wave 40s -1s linear infinite;
+    opacity: 0.5;
+  }
+
 .cloud-background {
     position: relative;
     overflow: hidden;
@@ -142,6 +165,10 @@ h1 {
                 url(./imgs/clouds1000_blur3.png) 100px 250px;
       animation: wind 120s linear infinite;
       z-index: 3;
+  }
+
+  .hiden {
+    display: none;
   }
 
   /* Keyframes below here ! */
