--- a/style.css
+++ b/style.css
@@ -14,19 +14,22 @@ h1 {
 
 .landingTopContainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
 .landingLeft {
-    width: 20%;
+    width: 25%;
 }
 
 .landingTitleContainer {
-    justify-content: space-between;
+    width: 100%;
+    text-align: center;
 }
 
 .leaderSurfboardContainer {
     display: flex;
+    width: 25%;
 }
 
 .mainContainer {
@@ -43,17 +46,6 @@ h1 {
     border-radius: 10px;
     background: linear-gradient(#f9855d,#fdd288,#ffffff);
     overflow: hidden;
-}
-
-.waves {
-    position: relative;
-    width: 100%;
-    height: 30vh;
-    margin-bottom:-7px;
-    min-height:100px;
-    max-height:150px;
-    z-index: -2;
-    
 }
 
 .sun {
@@ -74,7 +66,6 @@ h1 {
     bottom: 0;
     left: 0;
     right: 0;
-    overflow-x: hidden;
     background-color: #1e90ff;
     border-top: 2px #ffffff solid;
     z-index: 4;
@@ -117,11 +108,6 @@ h1 {
     margin-right: 50px;
 }
 
-.startGameButtonContainer {
-    display: flex;
-    justify-content: center;
-}
-
 #startGameButton {
     border-radius: 10px;
     background-color: #373C99;
@@ -155,7 +141,6 @@ h1 {
 
 .cloud-background {
     position: relative;
-    overflow: hidden;
     height: 600px;
     background: url(./imgs/clouds1000.png);
     background: url(./imgs/clouds10002.png) 0 200px,
@@ -163,6 +148,16 @@ h1 {
                 url(./imgs/clouds1000_blur3.png) 100px 250px;
       animation: wind 120s linear infinite;
       z-index: 3;
+  }
+
+  footer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    background-color: #373C99;
+    color: white;
+    text-align: center;
   }
 
   /* Keyframes below here ! */
