--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ h1 {
     z-index: 5;
     background-image: url(./imgs/surfingPenguin.png);
     background-size: cover;
+    transition: left linear 0.15s;
 }
 
 #displaySplashInstructionsContainer {
