--- a/style.css
+++ b/style.css
@@ -160,6 +160,32 @@ h1 {
     text-align: center;
   }
 
+#displayEndGameContainer {
+    position: absolute;
+    display: flex;
+    top: 0px;
+    left: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+    width: 1000px;
+    padding: 40px;
+    background-color: #FE9D8D;
+    border: 5px #373C99 solid;
+    font-size: 2rem;
+    z-index: 11;
+}
+#formContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+#nameField {
+    width: 110px;
+}
+
   /* Keyframes below here ! */
 @keyframes wave {
     0% {transform: translateX(0);}
@@ -179,3 +205,4 @@ h1 {
     }
 
 }
+
