following trainer review, removed inline JS from HTML file, renamed some variables and fixed incorrect indentation

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ width: 400%;
     margin-top:10px;
 }
 
-.saveButton, .playButton {
+#saveButton, #playButton {
     border-radius: 10px;
     background-color: #373C99;
     color: #F0EFF5;
