--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ footer {
     background-color: #FE9D8D;
     border: 5px #373C99 solid;
     z-index: 10;
+    opacity: 0.80;
 }
 
 .leaderboardSurfboardContainer {
@@ -289,12 +290,14 @@ footer {
     font-size: 2rem;
     z-index: 11;
 }
+
 #formContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
 
 }
+
 #nameField {
     width: 110px;
     text-transform: uppercase;
