Changed class of player names and transformed to uppercase in CSS.

--- a/style.css
+++ b/style.css
@@ -293,6 +293,10 @@ footer {
     margin-top:10px;
 }
 
+.playerName {
+    text-transform: uppercase;
+}
+
 #saveButton, #playButton {
     border-radius: 10px;
     background-color: #373C99;
