--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ footer {
     text-align: center;
 }
 
+.linkToGithub {
+    color: aliceblue;
+}
+
 .landingTopContainer,  
 .leaderboardTopContainer {
     display: flex;
@@ -263,15 +267,16 @@ footer {
       animation: wind 120s linear infinite;
       z-index: 3;
   }
-  footer {
+
+footer {
     position: absolute;
-    bottom: 0px;
-    left: 0px;
+    bottom: 0;
+    left: 0;
     width: 100%;
     background-color: #373C99;
     color: white;
     text-align: center;
-  }
+}
 
 #displayEndGameContainer {
     position: absolute;
