--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: #FE9D8D;
     font-family: "Press Start 2P", sans-serif;
     background-color: #fe9d8d;
+    background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.33'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 footer {
@@ -249,6 +250,7 @@ a :hover {
     text-decoration: none;
     text-align: center;
 }
+
 .leaderboardSurfboardImage {
     height: 180px;
     width: 400px;
@@ -432,4 +434,24 @@ footer {
         background-position: 0 200px, 0 300px, 100px 250px;
     }
 
+}
+
+@keyframes bob {
+    0% {
+        top: 415px;
+    }
+
+    40% {
+        top: 418px;
+        transform: rotate(-3deg);
+    }
+
+    80% {
+        top: 412px;
+        transform: rotate(3deg);
+    }
+
+    100% {
+        top: 415px;
+    }
 }
