--- a/style.css
+++ b/style.css
@@ -172,7 +172,17 @@ footer {
     transition: left linear 0.15s;
     animation: bob 0.9s linear infinite;
 }
+#island {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    left: 70px;
+    top: 390px;
+    z-index: 4;
+    background-image: url(./imgs/island.png);
+    background-size: cover;
 
+}
 .instructionsOverlayTitle {
     font-weight: 400;
 }
