--- a/style.css
+++ b/style.css
@@ -81,14 +81,22 @@ a :hover {
     left: 90px;
 }
 
-.leaderSurfboardContainer,
 .backButtonContainer  {
     position: absolute;
     top: 10px;
-    right: 100px;
+    right: -20px;
     width: 200px;
     display: flex;
-    padding: 0 20px 0 100px;
+    padding: 0 20px 0 0;
+    color: #000000;
+}
+
+.leaderSurfboardContainer {
+    position: absolute;
+    top: 10px;
+    right: -20px;
+    width: 200px;
+    display: flex;
     color: #000000;
 }
 
