--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ a :hover {
     color: #F0EFF5;
     width: 150px;
     padding: 10px;
+    box-shadow: #F0EFF5 5px 5px 0 0;
 }
 
 #leaderSurfboard {
